editor/test/resources/errors_project/errors/panel_using_name_conflict_twice.gui
script: ""
background_color {
  x: 0.0
  y: 0.0
  z: 0.0
  w: 0.0
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 200.0
    y: 100.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  type: TYPE_TEMPLATE
  id: "name_conflict"
  layer: ""
  inherit_alpha: true
  alpha: 1.0
  template: "/errors/name_conflict.gui"
  template_node_child: false
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 200.0
    y: 100.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  type: TYPE_TEMPLATE
  id: "template"
  layer: ""
  inherit_alpha: true
  alpha: 1.0
  template: "/errors/name_conflict.gui"
  template_node_child: false
}
material: "/builtins/materials/gui.material"
adjust_reference: ADJUST_REFERENCE_PARENT
max_nodes: 512
